M32 WIP: P5 internal corner probing

--- a/UCCNC/Profiles/Macro_UB1/M32.md
+++ b/UCCNC/Profiles/Macro_UB1/M32.md
@@ -1,4 +1,6 @@
 
+P: Probe Routine
+
 Q: Probe overtravel threshold
 W: WCS index number
 U: WCS or Tool offset tolerance
@@ -13,7 +15,7 @@ I, J: Incremental distance of additional probe cycle
 
 N: Feature position tolerance
 E: Feature dimension tolerance
-P: Feature true position tolerance
+L: Feature true position tolerance
 
 H: Tool offset number
 K: Tool offset update precentage
